<resources>
    <string name="app_name">Baajna</string>

    <!-- Strings related to login & signup -->
    <string name="log_in">Login</string>
    <string name="forget_pass">Forgot Password?</string>
    <string name="not_member">Not a member? Sign up now.</string>
    <string name="reg_email">Email</string>
    <string name="passwords">Password</string>
    <string name="register">Register</string>
    <string name="allready_reg">Already registered! Login.</string>
    <string name="loginTitle">Log in your account</string>
    <string name="signupQuestion">Don\'t have an account?</string>
    <string name="action_singup">Sign up free</string>
    <string name="signupTitle">Sign up your account</string>
    <string name="existedIdQuestion">Already have an account?</string>
    <string name="action_existedID">Log In</string>
    <string name="action_search">Search</string>
    <string name="prompt_email">Email</string>
    <string name="login_password">Password</string>
    <string name="signup_password">Password</string>
    <string name="signup_password_confirmation">Confirm Password</string>
    <string name="action_log_in_short">Log in</string>
    <string name="action_sign_up_short">Sign up</string>
    <string name="action_sign_up_confirmation_short">Sign up confirmation</string>

    <string name="action_hide">Hide Panel</string>
    <string name="action_show">Show Panel</string>
    <string name="action_anchor_enable">Enable Anchor Point</string>
    <string name="action_anchor_disable">Disable Anchor Point</string>

    <string name="banner_ad_unit_id">ca-app-pub-7543195829018344/5859744318</string>
    <string name="banner_ad_unit_id_test">ca-app-pub-3940256099942544/6300978111</string>


    <!--later-->
    <!--<string name="plus_sign_out">Switch Google+ account</string>-->
    <!--<string name="plus_disconnect">Disconnect from Google+</string>-->
    <!--<string name="error_invalid_email">This email address is invalid</string>-->
    <!--<string name="error_invalid_password">This password is too short</string>-->
    <!--<string name="error_incorrect_password">This password is incorrect</string>-->
    <!--<string name="error_field_required">This field is required</string>-->

    <string name="title_section1">Baajna</string>
    <string name="title_section2">My Playlist</string>
    <string name="title_section3">My Libraries</string>
    <string name="title_section4">Settings</string>
    <string name="title_section5">Albums</string>
    <string name="title_section6">Artists</string>
    <string name="title_section7">Logout</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="songbar_songtitle">No song recently played</string>

    <string name="item_search">Search</string>

    <string name="tab_section1">Albums</string>
    <string name="tab_section2">Artists</string>
    <string name="tab_section3">Songs</string>

    <string name="settings_about">About</string>
    <string name="settings_versionInfo">Version</string>
    <string name="settings_tos">Terms of services</string>
    <string name="settings_policy">Privacy policy</string>
    <string name="settings_license">License</string>
    <string name="settings_mobileTerms">Mobile terms and conditions</string>
    <string name="settings_accountInfo">Account Information</string>
    <string name="settings_changePwd">Change a password</string>
    <string name="settings_logout">Logout</string>

    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_account">AccountActivity</string>
    <string name="title_activity_login">Log In</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="title_activity_artistalbumlist">AlbumArtistListActivity</string>
    <string name="title_activity_playlist">PlayListActivity</string>
    <string name="title_activity_musicplayer">MusicPlayerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_my_library">MyLibraryActivity</string>

    <string name="hello_world">Hello world!</string>

    <string name="action_settings">Settings</string>

    <string name="music_file_server">https://s3.amazonaws.com/sparklesongs/songs/</string>

    <string name="facebook_app_id">1534066176896914</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_android_building_music_player">AndroidBuildingMusicPlayerActivity
    </string>
    <string name="title_activity_song_listby_album">SongListbyAlbum</string>
    <string name="title_activity_song_request">SongRequestActivity</string>

</resources>
