<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_home"
    android:gravity="center"
    tools:context="baajna.scroll.owner.mobioapp.activity.LoginActivity">

    <!-- Login progress -->
    <!--<ProgressBar android:id="@+id/login_progress" style="?android:attr/progressBarStyleLarge"-->
    <!--android:layout_width="wrap_content" android:layout_height="wrap_content"-->
    <!--android:layout_marginBottom="8dp" android:visibility="gone" />-->

    <ImageView
        android:id="@+id/logInBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/background_popup" />
    <!--useless background image-->

    <TextView
        android:id="@+id/textview_loginTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:text="@string/loginTitle"
        android:textColor="#283A90"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/edittext_loginEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textview_loginTitle"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:gravity="center"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:textColor="#999999" />


    <EditText
        android:id="@+id/edittext_loginPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edittext_loginEmail"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:hint="@string/login_password"
        android:imeActionId="@+id/login"
        android:imeActionLabel="@string/action_log_in_short"
        android:imeOptions="actionUnspecified"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true"
        android:textColor="#999999" />

    <Button
        android:id="@+id/btn_loginBtn"
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:layout_below="@id/edittext_loginPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_login3"
        android:onClick="goToMain" />

    <!--<com.facebook.login.widget.LoginButton-->
    <!--android:id="@+id/login_button"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_gravity="center_horizontal"-->
    <!--android:layout_marginTop="56dp"-->
    <!--android:layout_below="@+id/signupQuestionContainer"-->
    <!--android:layout_alignLeft="@+id/textview_loginTitle"-->
    <!--android:layout_alignStart="@+id/textview_loginTitle" />-->

    <LinearLayout
        android:id="@+id/signupQuestionContainer"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_below="@id/btn_loginBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textview_signupQuestion"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:gravity="center"
            android:text="@string/signupQuestion"
            android:textColor="#A0A0A0"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btn_signupRequest"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:background="@null"
            android:onClick="signupAccount"
            android:paddingLeft="8dp"
            android:text="@string/action_singup"
            android:textColor="#3467BD"
            android:textSize="15sp" />
    </LinearLayout>

    <!--google plus login-->
    <!--<ScrollView android:id="@+id/login_form" android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent">-->
    <!--<LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"-->
    <!--android:orientation="vertical">-->

    <!--<com.google.android.gms.common.SignInButton android:id="@+id/plus_sign_in_button"-->
    <!--android:layout_width="match_parent" android:layout_height="wrap_content"-->
    <!--android:layout_marginBottom="32dp" />-->

    <!--<LinearLayout android:id="@+id/plus_sign_out_buttons"-->
    <!--android:layout_width="match_parent" android:layout_height="wrap_content"-->
    <!--android:visibility="gone" android:weightSum="2">-->

    <!--<Button android:id="@+id/plus_sign_out_button" style="?android:textAppearanceSmall"-->
    <!--android:layout_width="match_parent" android:layout_height="match_parent"-->
    <!--android:layout_weight="1" android:text="@string/plus_sign_out" />-->

    <!--<Button android:id="@+id/plus_disconnect_button"-->
    <!--style="?android:textAppearanceSmall" android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent" android:layout_weight="1"-->
    <!--android:text="@string/plus_disconnect" />-->

    <!--</LinearLayout>-->
    <!--</LinearLayout>-->
    <!--</ScrollView>-->


</RelativeLayout>



